--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "bootstrap": "^5.0.0",
+    "chart.js": "^3.2.1",
+    "handtrackjs": "^0.1.5",
+    "react": "^16.8.0",
+    "react-bootstrap": "^1.5.2",
+    "react-bootstrap-range-slider": "^2.0.2",
+    "react-chartjs-2": "^3.0.3",
+    "react-dom": "^16.8.0",
+    "react-feather": "^2.0.9",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "socket.io": "^4.0.2",
+    "socket.io-client": "^4.0.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
