--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "mood-checker",
   "version": "0.1.0",
-  "private": true,
+  "engines": {
+    "node": "14.x",
+    "npm": "7.x"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
