--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-feather": "^2.0.9",
     "react-linkify": "^1.0.0-alpha",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-transition-group": "^4.4.1",
     "socket.io": "^4.0.2",
     "socket.io-client": "^4.0.1",
